--- a/love.css
+++ b/love.css
@@ -3,7 +3,7 @@ body {
     margin: 0;
     padding: 0;
     height: 100vh;
-    background: url('img3.webp') no-repeat center center fixed;
+    background: url('img13.jpg') no-repeat center center fixed;
     background-size: cover;
     display: flex;
     align-items: center;
@@ -20,12 +20,13 @@ body {
 }
 
 .card {
-    background-color: rgba(255, 255, 255, 0.3); /* White with 80% opacity */
+    background-color: rgba(222, 181, 181, 0.1); /* White with 80% opacity */
     border-radius: 10px;
+  
     padding: 20px 60px;
     max-width: 90%;
     text-align: center;
-    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 0px 15px rgba(208, 153, 153, 0.2);
     box-sizing: border-box; /* Ensure padding and borders are included in the element's total width and height */
 }
 
@@ -37,7 +38,7 @@ body {
 }
 
 button {
-    padding: 3px 3px;
+    padding: 1px;
     margin: 10px;
     border: none;
     border-radius: 5px;
